Implement TextBuffer and Caret classes
- Write tests for TextBuffer and caret classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-file(GLOB_RECURSE SOURCES "src/main.cpp")
+include_directories(src/Core src/EditorCore)
+file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_executable(Rewrite ${SOURCES})
+
+enable_testing()
+
+# Add subdirectory for tests
+add_subdirectory(tests)
