Add automatic GTest fetching with FetchContent

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,14 @@
-# Google Test
-find_package(GTest REQUIRED)
+# Google Test setup using FetchContent
+include(FetchContent)
+
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/release-1.12.1.tar.gz
+)
+
+# Make Google Test available
+FetchContent_MakeAvailable(googletest)
+
 include_directories(${GTEST_INCLUDE_DIRS})
 
 # List of test source files
@@ -16,7 +25,7 @@ list(REMOVE_ITEM SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/main.cpp)
 target_sources(RewriteTest PRIVATE ${SOURCE_FILES})
 
 # Link against Google Test Library
-target_link_libraries(RewriteTest ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES})
+target_link_libraries(RewriteTest gtest gtest_main)
 
 # Register the test with CTest
 add_test(NAME RewriteTest COMMAND RewriteTest)
